--- a/css/import.css
+++ b/css/import.css
@@ -1,2 +1,8 @@
+/* all common----------------------- */
 @import url("reset.css");
+@import url("https://fonts.googleapis.com/css?family=Noto+Serif+JP|Source+Sans+Pro:300&display=swap");
 @import url("common.css");
+
+/* each page------------------------ */
+@import url("index.css");
+@import url("about.css");
