--- a/css/import.css
+++ b/css/import.css
@@ -1,6 +1,6 @@
 /* all common----------------------- */
 @import url("reset.css");
-@import url("https://fonts.googleapis.com/css?family=Noto+Serif+JP|Source+Sans+Pro:300&display=swap");
+@import url("https://fonts.googleapis.com/css?family=M+PLUS+1p|Source+Sans+Pro:300&display=swap");
 @import url("common.css");
 
 /* each page------------------------ */
