--- a/css/common.css
+++ b/css/common.css
@@ -68,7 +68,7 @@ h2[class*="__header"]{
   display: flex;
 }
 
-.social-link *{
+.social-link *, .icon-allow-up{
   width: 50px;
   height: 50px;
   margin: 0 10px;
