--- a/css/common.css
+++ b/css/common.css
@@ -53,6 +53,16 @@ h2[class*="__header"]{
   margin-bottom: 20px;
 }
 
+h3[class*="__header"]{
+  font-family: 'Source Sans Pro', sans-serif;
+  color: #333;
+  font-size:1.4em;
+  font-weight:400;
+  line-height:1.2;
+  text-align: center;
+  margin-bottom: 10px;
+}
+
 /* header & footer ------------- */
 /* header__nav ----- */
 .header__nav{
@@ -76,6 +86,7 @@ h2[class*="__header"]{
   border: solid #666 1px;
   border-radius:50%;
   text-align: center;
+  padding-top: 10px;
 }
 
 .page-nav{
@@ -88,10 +99,16 @@ h2[class*="__header"]{
   font-weight: bold;
 }
 
+/* header__bottom ----- */
+.header__bottom .left-info{
+  width:100% !important;
+}
+
 /* footer ---------- */
 .footer{
   text-align: center;
 }
+
 
 /* media-------------- */
 
@@ -102,13 +119,19 @@ h2[class*="__header"]{
   }
   .header__bottom .content__inner{
     display: block !important;
-    padding-bottom:30px;
+  }
+
+  .header__bottom .right-info .right-info__inner{
+    transform:none !important;
   }
 
   .header__bottom .right-info{
     padding: 0px;
   }
 
+  .site-title{
+    margin-bottom:20px;
+  }
   .site-title, .site-description{
     text-align: center;
   }
@@ -120,6 +143,36 @@ h2[class*="__header"]{
 }
 
 @media screen and (max-width: 520px){
+/* common ------------------------------- */
+/* header-nav ---------- */
+.header__nav{
+  height: auto;
+  padding: 30px 0 0 0;
+}
+
+.header__nav--l{
+  padding: 0 50px 10px 50px;
+}
+
+.header__nav .content__inner{
+  display: block !important;
+}
+
+.header__nav--r .page-nav{
+  display: block !important;
+}
+
+.header__nav--r .page-nav__list{
+  width:100%;
+  height: 40px;
+  line-height:2.5;
+  font-weight: bold;
+  border-top:solid 1px #ccc;
+  text-align: center;
+}
+
+/* index-page --------------------------- */
+/* main---------------- */
   .info__content{
     display: block !important;
   }
