--- a/css/import.css
+++ b/css/import.css
@@ -2,6 +2,7 @@
 @import url("reset.css");
 @import url("https://fonts.googleapis.com/css?family=M+PLUS+1p|Source+Sans+Pro:300&display=swap");
 @import url("common.css");
+@import url("js.css");
 
 /* each page------------------------ */
 @import url("index.css");
