--- a/css/js.css
+++ b/css/js.css
@@ -1,1 +1,89 @@
-/* topに戻るボタン */
+/* slider ----------------------*/
+.slideshow{
+  min-width: 100%;
+  height: 200px;
+  overflow: hidden;
+  position: relative;
+}
+
+.slideshow-slides{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+}
+
+.slideshow-slides .slide{
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  position: absolute;
+}
+
+.slideshow-slides .slide img{
+  position: absolute;
+  margin-left: 10px;
+}
+
+.slideshow-nav a.prev:before{
+  content: '<';
+  display: inline-block;
+}
+
+.slideshow-nav a.next:before{
+  content: '>';
+  display: inline-block;
+}
+
+.slideshow-nav a{
+  position: absolute;
+  font-weight:bold;
+  top: 50%;
+  left: 50%;
+  width:40px;
+  height: 40px;
+  margin-top: -25px;
+  font-size:25px;
+  background: rgba(220, 220, 220, 0.8);
+  border-radius:50%;
+}
+
+.slideshow-nav a.prev{
+  margin-left:-47%;
+  padding: 4px 0 0 13px;
+}
+
+.slideshow-nav a.next{
+  margin-left:39%;
+  padding: 4px 0 0 15px;
+}
+
+.slideshow-nav a.disabled{
+  display: none;
+}
+
+/* JavsScript 無効時 */
+.no-js .slideshow {
+  height: auto;
+}
+.no-js .slideshow-slides {
+  height: auto;
+  position: static;
+}
+.no-js .slideshow-slides .slide {
+  display: block;
+  height: auto;
+  position: static;
+}
+.no-js .slideshow-slides .slide img {
+  margin: auto;
+  position: static;
+}
+.no-js .slideshow-nav,
+.no-js .slideshow-indicator {
+  display: none;
+}
+
+/* topに戻るボタン ----------------------*/
+.no-js .scroll-top-btn{
+  display: none;
+}
