--- a/css/common.css
+++ b/css/common.css
@@ -91,7 +91,7 @@ h3[class*="__header"]{
   display: flex;
 }
 
-.social-link *, .icon-allow-up{
+.social-link li, .icon-allow-up{
   width: 50px;
   height: 50px;
   margin: 0 10px;
