--- a/css/js.css
+++ b/css/js.css
@@ -86,8 +86,14 @@
 /* works ページ ----------------------*/
 .gallery-item{
   list-style:none;
-  margin-top: 10px; 
+  margin-top: 10px;
+  opacity: 0.7;
 }
+
+.gallery-item:hover{
+  opacity: 1;
+}
+
 
 .gallery-item.is-loading{
   opacity: 0;
