--- a/css/common.css
+++ b/css/common.css
@@ -130,6 +130,19 @@ h3[class*="__header"]{
     width:100%;
     margin: 0;
   }
+
+  .header__bottom{
+    padding-left: 10px;
+  }
+
+  .info, .works{
+    padding-left: 30px;
+  }
+
+  .blog{
+    padding-left: 5px;
+  }
+
   .header__bottom .content__inner{
     display: block !important;
   }
@@ -166,9 +179,13 @@ h3[class*="__header"]{
     margin: 0 auto;
   }
 
-  /* works-page --------------------------- */
+/* works-page --------------------------- */
   .mordal .mordal__inner .hidden{
-    display: block;
+    display: block !important;
+  }
+
+  .mordal .mordal__inner .hidden img {
+    width: 90% !important;
   }
 
 }
@@ -203,6 +220,10 @@ h3[class*="__header"]{
 }
 
 /* index-page --------------------------- */
+
+.header__bottom .right-info {
+  padding: 30px 0 30px 30px !important;
+}
 /* main---------------- */
   .info__content{
     display: block !important;
@@ -223,8 +244,17 @@ h3[class*="__header"]{
 
 /* about-page --------------------------- */
   .inner__r .profile {
+    max-width: 100% !important;
+    margin: 0 auto;
+  }
+
+  .inner__l figure.self_photo{
     max-width: 100%;
     margin: 0 auto;
   }
 
+/* works-page --------------------------- */
+  .mordal .mordal__inner .hidden img {
+    width: 100% !important;
+  }
 }
